Fixing headline on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -157,11 +157,11 @@ nav {
     color: rgb(262, 262, 262);
     text-shadow: 1px 1px 2px black;
     font-weight: 500;
-    font-size: 3.8rem;
+    font-size: 3.3rem;
     line-height: 1.15;
     letter-spacing: 2px;
     padding-top: 0.1em;
-    margin-bottom: 1.6em;
+    margin-bottom: 2em;
     background-color: rgba(255, 244, 237, 0.8);
   }
   p {
